fix(listbox): fix tag spacing on filterable multiselect

--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -398,8 +398,8 @@ $list-box-menu-width: rem(300px);
     width: auto;
     padding: rem(8px);
     padding-right: rem(2px); // Align with hover circle of X button
+    margin: 0;
     margin-right: rem(10px);
-    margin-left: 0;
     border-radius: rem(12px);
   }
 
